# xdp-bpf

./: .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  start-udp-server.sh  udp-send-msg.py  udpserver.py  xdp-udp.c
udpredirect/: Cargo.toml  Dockerfile  Dockerfile.udpproducer  Makefile  build.rs  docker-compose.yml  udpproducer.py
udpredirect/src/: lib.rs  main.rs  xdpqueue.rs
udpredirect/src/bpf/: udp.bpf.c  udp.skel.rs  xdp-udp.skel.rs  xdpudpredirect.skel.rs
